<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/table_log_button" />

    <Button
        android:id="@+id/custom_logger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_logger_text" />

    <Button
        android:id="@+id/crash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crash_button_text" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_button_text" />

    <Button
        android:id="@+id/interrupt_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interrupt_upload_button_text" />

    <Button
        android:id="@+id/capture_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_screen_button_text" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
